# CodeTemplate

./: .gitignore  README.md
Electron/: package.json
React/: index.html  package.json  webpack.config.js
React/src/: app.jsx  index.jsx
React/src/actionTypes/: index.js
React/src/actions/: cart.action.js  index.js
React/src/reducers/: cart.reducer.js  index.js  initialState.js
js/: .gitignore  index.html  webpack.config.js
js/src/: main.js
solib/: .gitignore  build.sh
solib/client/: CMakeLists.txt  Makefile  fxnV4L2test  fxnV4L2test.c
solib/lib/: CMakeLists.txt  Makefile  fxnV4L2.c  fxnV4L2.h
